--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "pusher-js": "^7.0.6",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
+  },
+  "engines": {
+    "node": "0.8.x"
   }
 }
