--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "final-form": "^4.20.4",
     "formik": "^2.2.9",
     "framer-motion": "^4",
+    "heic-convert": "^1.2.4",
     "heic2any": "^0.0.3",
     "moment": "^2.29.1",
     "next": "12.0.3",
