--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "postcss": "^8.3.11",
     "pusher-js": "^7.0.6",
     "tailwindcss": "^2.2.19",
-    "typescript": "4.4.4"
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": "0.8.x"
