--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@chakra-ui/icons": "^1.0.17",
     "@chakra-ui/react": "^1.6.12",
     "@chakra-ui/toast": "^1.4.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@react-google-maps/api": "^2.19.2",
-    "@storybook/react": "^7.2.1",
+    "@storybook/react": "^6.4.9",
     "@stripe/react-stripe-js": "^2.1.1",
     "@stripe/stripe-js": "^1.54.1",
     "antd": "^4.17.2",
@@ -32,7 +31,7 @@
     "heic-convert": "^1.2.4",
     "heic2any": "^0.0.3",
     "moment": "^2.29.1",
-    "next": "^12.3.4",
+    "next": "12.0.3",
     "react": "17.0.2",
     "react-bootstrap": "^2.6.0",
     "react-device-detect": "^2.1.2",
@@ -65,7 +64,7 @@
     "postcss": "^8.3.11",
     "pusher-js": "^7.0.6",
     "tailwindcss": "^2.2.19",
-    "typescript": "^5.1.6"
+    "typescript": "4.4.4"
   },
   "engines": {
     "node": "0.8.x"
