stripe donation checkout

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-query": "^3.33.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.22.0",
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "simple-react-validator": "^1.6.1",
